Spacing issue in Statusbar in Timesheet (#608)

--- a/client/pages/Timesheet/Overview/StatusBar/StatusBar.module.scss
+++ b/client/pages/Timesheet/Overview/StatusBar/StatusBar.module.scss
@@ -8,8 +8,12 @@
     .message {
       flex-grow: 1;
       flex-basis: 0;
-      justify-content: space-evenly;
-      margin-right: 8px;
+      justify-content: space-between;
+      margin-right: 6px;
+
+      &:last-child {
+        margin: 0;
+      }
     }
   }
 }
